grammar/grammar.js
    source_file: $ => choice(
      prec(3, $.full_document),    // complete @UTF8...@Begin...@End file
      prec(2, $.utterance),        // main tier + dependent tiers (no document headers)
      prec(1, $.main_tier),        // single *SPEAKER:\tcontent terminator
      prec(1, $.dependent_tier),   // single %tier:\tcontent
      prec(1, $.header),           // single @Header:\tcontent
      prec(1, $.pre_begin_header), // @PID, @Font, @Window, @Color words
      prec(0, $.standalone_word),  // single word token (for fragment parsing)
    ),

    // Full CHAT document structure:
    // 1. @UTF8 (required for validity; omission retained for E503 validation)
    // 2. Optional pre-@Begin headers (@PID, @Color words, @Window, @Font)
    // 3. @Begin (effectively required, but optional for lenient parsing)
    // 4. Main content headers and utterances
    // 5. @End (effectively required, but optional for lenient parsing)
    full_document: $ => seq(
      optional($.utf8_header),

      // Optional headers that can appear before @Begin
      // Pre-begin header order: pid? colorWords? window? font? BEG
      repeat($.pre_begin_header),

      $.begin_header,

      // Main content: headers and utterances after @Begin
      repeat($.line),

      $.end_header
    ),

    // DESIGN DECISION: Pre-@Begin header order is lenient (choice, not seq)
    // The ANTLR grammar enforces strict order: pid? colorWords? window? font? BEG
    // We allow any order because:
    //   1. "Parse, don't validate" - downstream can enforce ordering
    //   2. Real-world files may have non-standard ordering
    //   3. Strict ordering would reject otherwise-parseable files
    // Downstream consumers should validate ordering if required.
    // Reference: ChatJFlexAntlr4Parser.g4 chatPrelude rule
    // The actual headers permitted in this slot are drawn directly from the CLI manual
    // plan for CHAT (#Pre_Begin_Headers), so this rule only enumerates pid, color words,
    // window, and font markers as per the specification.
    newline: $ => /\r\n|[\r\n]/,

    star: $ => '*',       // Main tier prefix marker
    space: $ => ' ',
    tab: $ => '\t',

    // Matches all non-newline characters to end of line.
    // Used as a building block for free-text header values and catch-all content.
    text_segment: $ => /[^ \u0015\r\n][^\u0015\r\n]*/,

    // Media bullet: \u0015START_END\u0015 or \u0015START_END-\u0015 (skip)
    //
    // ONE structured rule used everywhere bullets appear:
    // - `utterance_end` (terminal timing after terminator)
    // - `base_content_item` (inline timing between words)
    // - `text_with_bullets` (dependent tier timing)
    // - `wor_tier_body` (word-level timing)
    //
    // The skip dash (-) before closing NAK is extremely rare (10 occurrences
    // in 99,742 files) but syntactically valid.
    text_with_bullets_and_pics: $ => repeat1(choice(
      $.text_segment,
      // A bullet/pic owns its trailing spaces: CLAN CHECK requires a space
      // after a bullet, and the corpus has zero bullets not followed by a
      // space or newline. Consuming them here keeps `text_segment` (which
      // cannot start with a space) valid for the following run, and the
      // spaces are canonical delimiters the serializer re-inserts.
      seq($.bullet, repeat($.space)),
      seq($.inline_pic, repeat($.space)),
      $.continuation
    )),

    // Text content with optional inline bullets interspersed (no pics)
    // Format: text [bullet text]* or bullet [text bullet]*
    // Used in: %act, %add, %cod, %eng, %err, %exp, %gpx, %ort, %sit, %tim, %x...
    // Includes continuation lines (\n\t) to handle multi-line tiers
    // A tier BODY may be absent, and every dependent-tier rule whose body is
    // free text marks it `optional(...)` for that reason: an empty `%eng:` is a
    // real (if invalid) construct a file can contain. It lowers to a payload
    // that says it is empty and E756 judges it, rather than failing to parse
    // and recovering generically while the re2c backend reads the same file as
    // VALID. Which rules those are is not restated here, because a hand-kept
    // count beside the list it counts is the first thing to go wrong; grep
    // `optional($.text_with_bullets` to read the real set off the grammar.
    //
    // This rule, and `text_with_bullets_and_pics`, themselves stay `repeat1`.
    // Optionality is per tier rule on purpose: relaxing a shared body would
    // silently admit an empty `%mor`, `%gra` and `@Comment`, whose payloads
    // are not free text.
    period: $ => '.',
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#QuestionMark_Terminator
    pipe: $ => '|',
    comma: $ => ',',
    right_brace: $ => '}',
    left_bracket: $ => '[',
    right_bracket: $ => ']',

    // === CODE MARKERS ===
    // Named rules for semantic markers
    line: $ => choice(
      $.header,
      $.utterance,
      $.blank_line,
      $.unsupported_line,
    ),

    // A blank line: a line break with no content. CHAT does not allow blank
    // lines anywhere in the transcript (CLAN CHECK 91). Represented as a
    // structural node (the single-break `newline` token no longer fuses
    // consecutive newlines) so the parser can flag it from the tree rather than
    // by scanning source text; the Rust parser emits BlankLineNotAllowed (E747).
    blank_line: $ => $.newline,

    // Catch-all for lines that don't start with *, @, or %, prevents ERROR
    // cascade when junk lines appear in CHAT files.  The Rust parser will
    // report a validation warning and skip these.
    utf8_header: $ => seq(token('@UTF8'), $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Begin_Header
    // OPTIMIZATION: token('@Begin') reduces states vs seq(at_sign, 'Begin')
    begin_header: $ => seq(token('@Begin'), $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Languages_Header
    // OPTIMIZATION: token('@Languages') reduces states; whitespace handled by header_sep
    languages_header: $ => seq(
      $.languages_prefix,
      $.header_sep,
      $.languages_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Participants_Header
    // OPTIMIZATION: token('@Participants') reduces states; whitespace handled by header_sep
    participants_header: $ => seq(
      $.participants_prefix,
      $.header_sep,
      $.participants_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#ID_Header
    // OPTIMIZATION: token('@ID') reduces states; whitespace handled by header_sep
    id_header: $ => seq(
      $.id_prefix,
      $.header_sep,
      $.id_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#End_Header
    // OPTIMIZATION: token('@End') reduces states vs seq(at_sign, 'End')
    end_header: $ => seq(token('@End'), $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Birth_Header
    // ANTLR: birthof: BIRTHOF whoChecked COLON TAB DATE_ALL NEWLINE
    // Birth of takes a specific date format, not free_text
    comment_header: $ => seq($.comment_prefix, $.header_sep, $.text_with_bullets_and_pics, $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Date_Header
    utterance: $ => seq(
      $.main_tier,
      repeat($.dependent_tier)
    ),

    // Main tier content after the tab, content is required
    // Used by: main_tier (*SPEAKER:\t)
    // NOTE: No leading/trailing optional(whitespaces), contents handles its own whitespace
    tier_body: $ => seq(
      field('linkers', optional($.linkers)),
      field('language_code', optional(
        seq(
          $.langcode,
          $.whitespaces
        )
      )),
      field('content', $.contents),
      field('ending', $.utterance_end)
    ),

    // %wor tier body, word-level timing tier.
    // Flat whitespace-separated sequence: words, inline bullets, and separators.
    // Whitespace is always required between items (it's the only separator).
    // The Rust parser pairs words with following inline_bullet by adjacency.
    main_tier: $ => seq(
      $.star,
      field('speaker', $.speaker),
      $.colon,
      $.tab,
      optional($.sep_trailing_space),
      $.tier_body
    ),

    // ANTLR: uend: anyTerminator finalCodes? (NEWLINE | url NEWLINE)
    // finalCodes: finalCode+ where finalCode is SSEXT anyWordsAndMedia RBRACKET (postcode annotations)
    // url: URL milliseconds BULLET_UNDERSCORE milliseconds (BULLET_URL | BULLET_URL_SKIP)
    // Utterance ending: terminator + postcodes + media bullet + newline
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Utterance_Terminator
    // NOTE: Space before terminator is consumed by contents rule's trailing whitespace.
    // Space before media_url and trailing whitespace must be handled here (post-terminator).
    utterance_end: $ => seq(
      // Terminator section - optional in CA transcription mode
      optional($.terminator),
      // Postcode annotations: [+ bch], [+ foo], etc.
      optional($.final_codes),
      // Optional media bullet, appears AFTER terminator in CHAT text.
      // Uses the unified `bullet` rule (structured, not opaque).
      optional(seq(optional($.whitespaces), $.bullet)),
      optional($.whitespaces),  // Allow trailing whitespace before newline
      $.newline
    ),

    // ANTLR: finalCodes: finalCode+ where finalCode is SSEXT anyWordsAndMedia RBRACKET
    // SSEXT = "[+ " so finalCode is postcode annotations like [+ bch], [+ foo]
    // Note: SSEXT includes the space, so no additional space needed before each annotation
    // But there can be spaces between multiple postcode annotations
    final_codes: $ => repeat1(
      seq(
        $.whitespaces,
        $.postcode
      )
    ),

    // media_url DELETED, replaced by the unified `bullet` rule (structured,
    // not opaque). See `bullet` definition near `text_with_bullets`.

    // ============================================================================
    // CONTENT ITEMS
    // ============================================================================
    // Content items are the building blocks of utterances: words, events, pauses,
    // groups, annotations, and special markers. The `contents` rule is a flat
    // repeat of content items separated by whitespace.
    //
    // Design: Content type restrictions are lenient, the grammar uses a unified
    // base_content_item for all contexts (main tier, groups, quotations).
    // Context-specific restrictions (e.g., groups cannot nest) are validated
    // downstream by the Rust parser, not by the grammar.
    //
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Words
    // ============================================================================

    // Base content items that can appear in any context (main tier, groups, quotations)
    // NOTE: overlap_point is handled separately as its own content_item
    base_content_item: $ => choice(
      $.underline_begin,
      $.underline_end,
      $.pause_token,
      $.word_with_optional_annotations,
      $.nonword_with_optional_annotations,
      $.other_spoken_event,
      $.long_feature,
      $.nonvocal,
      $.freecode,
      $.bullet,
    ),

    // Separator is its own first-class content item (not attached to preceding content)
    // Uses named leaf nodes for type-safe node dispatch
    content_item: $ => choice(
      $.base_content_item,
      $.group_with_annotations,
      $.quotation_with_optional_annotations,
      $.illegal_curly_quote,
      $.main_pho_group,
      $.main_sin_group,
      // A linker in content position. Linkers are utterance-initial by
      // definition; one that reduces here instead of into the tier_body
      // `linkers` field is misplaced, and the lowering names it (E766)
      // rather than leaving it to ERROR-node recovery. prec(-1) so the
      // utterance-initial reading (the `linkers` field) always wins the
      // reduce conflict at the start of the tier body.
      prec(-1, $.linker),
    ),

    // Other speaker's speech event, e.g., &*MOT:word, speech attributed to another speaker.
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Local_Event
    contents: $ => repeat1(choice(
      $.whitespaces,
      $.content_item,
      $.separator,
      $.overlap_point,
    )),

    // NOTE: No optional whitespace wrappers, contents handles its own whitespace
    postcode: $ => seq(
      token(prec(8, '[+')),
      $.space,
      field('code', $.annotation_content),
      $.right_bracket,
    ),

    // Freecode annotation: [^ code] - free-form code
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Freecodes
    // MUST stay opaque, structuring [^ as a prefix token conflicts with
    // ca_continuation_marker [^c] at the DFA level (prec(8) on [^ beats
    // the longer [^c] match).
    annotation_content: $ => /[^\]\r\n]+/,

    // ============================================================================
    // OVERLAP POINTS (CA overlaps)
    // ============================================================================
    // Overlap points indicate simultaneous speech between speakers.
    // Top points (⌈⌉) mark the first speaker's overlapped portion.
    // Bottom points (⌊⌋) mark the second speaker's overlapping portion.
    // Optional digit (⌈2, ⌊2) indexes multiple overlaps in same utterance.
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Overlap
    //
    // SIMPLIFIED: Overlap point distinguishes marker types in CST.
    // Each marker can optionally have an index (2-9).
    // The four marker types are preserved as separate CST nodes.
    // ============================================================================
    // Same prec(5) as standalone_word, tie-breaking by rule order prefers overlap_point
    // when standalone (space-separated). When adjacent to text, standalone_word wins by
    // maximal munch (longer match at same prec).
    // Overlap markers: ⌈⌉⌊⌋ with optional digit suffix.
    // Accepts [1-9] at the grammar level ("parse, don't validate").
    // [0] excluded: ⌈0 is overlap_point + zero-word (action without speech).
    // Validator rejects index 1, valid CHAT range is 2-9 (E373).
    word_with_optional_annotations: $ => seq(
      field('word', $.standalone_word),
      optional(seq(
        // A replacement `[: ...]` is a separate token and MUST be preceded by
        // whitespace, exactly like every `base_annotation` (see `base_annotations`
        // below, which already requires `$.whitespaces`). A glued `word[: foo]`
        // is invalid CHAT (CLAN CHECK error 161, "space required before [ code");
        // requiring the space here makes the glued form an ERROR node so the
        // parser rejects it, instead of silently accepting it.
        $.whitespaces,
        field('replacement', $.replacement)
      )),
      field('annotations', optional($.base_annotations))
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Group_Scopes
    // Group with annotations: <content> [annotation]
    // Groups MUST have annotations - cannot be standalone (ANTLR: annotatedGroup)
    // Example: <I dunno> [?] - uncertain transcription of phrase
    // NOTE: No optional whitespace wrappers, contents handles its own whitespace
    base_annotations: $ =>
      repeat1(
        seq(
          $.whitespaces,  // Required whitespace before each annotation
          $.base_annotation
        )
      )
    ,

    // Base annotations that can follow words, events, or groups
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Annotations
    word_segment: $ => token(prec(5, seq(
      WORD_SEGMENT_FIRST_RE,
      WORD_SEGMENT_REST_RE,
    ))),

    colon: $ => ':',

    // Chat.flex: WHO = [A-Za-z0-9_\'+\-]+ (exact match)
    id_prefix: $ => token('@ID'),
